<resources>
    <string name="app_name">Photo Blog</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="log_out">Logout</string>

    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>


    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">confirm password</string>

    <string name="dont_have_an_account">Don\'t have an account?</string>

    <string name="already_have_an_account">Already have an account? </string>


    <string name="forgot_password">Forgot password? </string>
    <string name="get_help">Get help</string>
    <string name="enter_your_name">your name</string>
    <string name="save_account_settings">save account settings</string>
    <string name="add_new_post">Add new post</string>
    <string name="add_description">Add description...</string>
    <string name="post_it">Post it</string>
    <string name="home">home</string>
    <string name="notification">notificaton</string>
    <string name="account">account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
