<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="60dp">

    <ProgressBar
        android:id="@+id/signUp_pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/signUp_logo_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/register_logo"
        android:layout_centerHorizontal="true">
    </ImageView>

    <EditText
        android:id="@+id/signUp_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_logo_ic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/signUp_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_email_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signUp_confirm_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_password_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUp_confirm_password_et"
        android:layout_alignStart="@+id/signUp_confirm_password_et"
        android:layout_below="@+id/signUp_confirm_password_et"
        android:layout_marginTop="26dp"
        android:background="@color/colorPrimary"
        android:shadowRadius="30"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/back_to_signIn"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>